<resources>
    <string name="app_name">Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="banner_inicial_dos_pacotes">Banner inicial dos pacotes</string>
    <string name="imagem_do_pacote">Imagem do pacote</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="preco_final">Preço final:</string>
    <string name="orientacao_pagamento_cartao">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="cvc">CVC</string>
    <string name="nome_do_cartao">Nome do cartão</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="mascara_nome">abcdefghijklmnopqrstuvxywzABCDEFGHIJKLMNOPQRSTUVXYWZ çÇãÃõÕáÁéÉíÍóÓúÚ</string>
</resources>
