<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/orientacao_pagamento_cartao"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pagamento_label_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/pagamento_label_valor"
        app:layout_constraintTop_toBottomOf="@id/pagamento_label_valor"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        android:nextFocusDown="@id/pagamento_mes_cartao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/mm"
        android:inputType="number"
        android:maxLength="2"
        android:nextFocusDown="@id/pagamento_ano_cartao"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/aa"
        android:inputType="number"
        android:maxLength="2"
        android:nextFocusDown="@id/pagamento_cvc_cartao"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusDown="@id/pagamento_nome_cartao"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mascara_nome"
        android:hint="@string/nome_do_cartao"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_mes_cartao" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rounded_orange"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/pagamento_nome_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_nome_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_cartao" />
</android.support.constraint.ConstraintLayout>